Fixed spacing between cards to center and tested background color for code box

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,17 +16,19 @@ header h1 {
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .card {
   display: flex;
   flex-flow: column wrap;
-  flex: 0 0 257px;
+  align-items: center;
+  flex: 0 0 270px;
+  height: 200px;
+  max-height: 200px;
   border-style: dotted;
   border-width: 2px;
   border-radius: 7px;
-  width: 257px;
   padding: 15px;
   margin: 7px;
   color: var(--light-txt);
@@ -43,4 +45,14 @@ header h1 {
   align-self: flex-start;
   position: relative;
   bottom: 30px;
+}
+
+.card-code,
+.card pre {
+  background-color: var(--dark-text);
+  color: var(--light-text);
+}
+
+.card pre {
+  width: 100%;
 }
